--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ about: 'about.html'
 
 <header class="main-header {% if page.cover %}" style="height: 400px; background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
   <nav class="main-nav overlay clearfix">
-    <h2>Johannes' Tech Blog</h2>
+    <h2>A developer's tech notes</h2>
     <a class="subscribe-button" href="about.html">About</a>
   </nav>
   <!--
