--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ about: 'about.html'
 
 <header class="main-header {% if page.cover %}" style="height: 400px; background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
   <nav class="main-nav overlay clearfix">
-    <h3>Thoughts on technology, consulting and effective communication</h3>
+    <h3>Thoughts on technology, consulting, and effective communication</h3>
     <a class="subscribe-button" href="about.html">About</a>
   </nav>
   <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
